--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
     "description": "Comprehensive Prettier and ESLint configuration for Javascript and Typescript projects, including React support.",
     "license": "LGPL-3.0-or-later",
     "author": "Jejebecarte",
-    "main": "src/index.js",
+    "main": "src/eslint/index.js",
     "exports": {
-        ".": "./src/index.js",
-        "./eslint": "./src/eslint/index.js",
+        ".": "./src/eslint/index.js",
         "./prettier": "./src/prettier/index.js",
         "./prettier-small-tab-width": "./src/prettier/small-tab-width.js"
     },
@@ -15,7 +14,8 @@
         "eslint",
         "prettier",
         "javascript",
-        "typescript"
+        "typescript",
+        "config"
     ],
     "homepage": "https://github.com/Jejebecarte/eslint-config#readme",
     "repository": {
@@ -29,12 +29,14 @@
         "@typescript-eslint/eslint-plugin": "^5.58.0",
         "@typescript-eslint/parser": "^5.58.0",
         "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-airbnb-typescript": "^17.0.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-import": "^2.27.5",
         "eslint-plugin-jsx-a11y": "^6.7.1",
         "eslint-plugin-react": "^7.32.2",
-        "eslint-plugin-react-hooks": "^4.6.0"
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-testing-library": "^5.10.3"
     },
     "peerDependencies": {
         "eslint": "^8.38.0",
